parser_imp/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> segment_list
Rule 2     segment_list -> segment_list segment
Rule 3     segment_list -> empty
Rule 4     segment -> misc_list class_def misc_list
Rule 5     misc_list -> misc_list misc
Rule 6     misc_list -> empty
Rule 7     class_def -> CLASS IDENTIFIER inheritance_opt COLON suite
Rule 8     inheritance_opt -> LPAREN base_classes RPAREN
Rule 9     inheritance_opt -> empty
Rule 10    base_classes -> IDENTIFIER
Rule 11    base_classes -> base_classes COMMA IDENTIFIER
Rule 12    misc -> import_stmt
Rule 13    misc -> function_def
Rule 14    misc -> statement
Rule 15    import_stmt -> IMPORT IDENTIFIER import_dots_opt
Rule 16    import_stmt -> FROM IDENTIFIER import_dots_opt IMPORT IDENTIFIER import_id_list_opt
Rule 17    import_dots_opt -> import_dots
Rule 18    import_dots_opt -> empty
Rule 19    import_dots -> import_dots DOT IDENTIFIER
Rule 20    import_dots -> DOT IDENTIFIER
Rule 21    import_id_list_opt -> COMMA import_id_list
Rule 22    import_id_list_opt -> empty
Rule 23    import_id_list -> IDENTIFIER
Rule 24    import_id_list -> import_id_list COMMA IDENTIFIER
Rule 25    function_def -> DEF IDENTIFIER LPAREN parameters_opt RPAREN COLON suite
Rule 26    parameters_opt -> parameters
Rule 27    parameters_opt -> empty
Rule 28    parameters -> IDENTIFIER
Rule 29    parameters -> parameters COMMA IDENTIFIER
Rule 30    statement -> attribute_as
Rule 31    statement -> simple_stmt
Rule 32    statement -> function_def
Rule 33    statement -> class_def
Rule 34    attribute_as -> IDENTIFIER ASSIGN expression
Rule 35    simple_stmt -> RETURN expression
Rule 36    simple_stmt -> expression
Rule 37    simple_stmt -> PASS
Rule 38    expression -> IDENTIFIER
Rule 39    expression -> literal
Rule 40    literal -> NUMBER
Rule 41    literal -> STRING_LITERAL
Rule 42    suite -> suite statement
Rule 43    suite -> statement
Rule 44    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 34
CLASS                : 7
COLON                : 7 25
COMMA                : 11 21 24 29
DEF                  : 25
DOT                  : 19 20
FROM                 : 16
IDENTIFIER           : 7 10 11 15 16 16 19 20 23 24 25 28 29 34 38
IMPORT               : 15 16
LPAREN               : 8 25
NUMBER               : 40
PASS                 : 37
RETURN               : 35
RPAREN               : 8 25
STRING_LITERAL       : 41
error                : 

Nonterminals, with rules where they appear

attribute_as         : 30
base_classes         : 8 11
class_def            : 4 33
empty                : 3 6 9 18 22 27
expression           : 34 35 36
function_def         : 13 32
import_dots          : 17 19
import_dots_opt      : 15 16
import_id_list       : 21 24
import_id_list_opt   : 16
import_stmt          : 12
inheritance_opt      : 7
literal              : 39
misc                 : 5
misc_list            : 4 4 5
parameters           : 26 29
parameters_opt       : 25
program              : 0
segment              : 2
segment_list         : 1 2
simple_stmt          : 31
statement            : 14 42 43
suite                : 7 25 42

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . segment_list
    (2) segment_list -> . segment_list segment
    (3) segment_list -> . empty
    (44) empty -> .

    CLASS           reduce using rule 44 (empty -> .)
    IMPORT          reduce using rule 44 (empty -> .)
    FROM            reduce using rule 44 (empty -> .)
    DEF             reduce using rule 44 (empty -> .)
    IDENTIFIER      reduce using rule 44 (empty -> .)
    RETURN          reduce using rule 44 (empty -> .)
    PASS            reduce using rule 44 (empty -> .)
    NUMBER          reduce using rule 44 (empty -> .)
    STRING_LITERAL  reduce using rule 44 (empty -> .)
    $end            reduce using rule 44 (empty -> .)

    program                        shift and go to state 1
    segment_list                   shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> segment_list .
    (2) segment_list -> segment_list . segment
    (4) segment -> . misc_list class_def misc_list
    (5) misc_list -> . misc_list misc
    (6) misc_list -> . empty
    (44) empty -> .

    $end            reduce using rule 1 (program -> segment_list .)
    CLASS           reduce using rule 44 (empty -> .)
    IMPORT          reduce using rule 44 (empty -> .)
    FROM            reduce using rule 44 (empty -> .)
    DEF             reduce using rule 44 (empty -> .)
    IDENTIFIER      reduce using rule 44 (empty -> .)
    RETURN          reduce using rule 44 (empty -> .)
    PASS            reduce using rule 44 (empty -> .)
    NUMBER          reduce using rule 44 (empty -> .)
    STRING_LITERAL  reduce using rule 44 (empty -> .)

    segment                        shift and go to state 4
    misc_list                      shift and go to state 5
    empty                          shift and go to state 6

state 3

    (3) segment_list -> empty .

    CLASS           reduce using rule 3 (segment_list -> empty .)
    IMPORT          reduce using rule 3 (segment_list -> empty .)
    FROM            reduce using rule 3 (segment_list -> empty .)
    DEF             reduce using rule 3 (segment_list -> empty .)
    IDENTIFIER      reduce using rule 3 (segment_list -> empty .)
    RETURN          reduce using rule 3 (segment_list -> empty .)
    PASS            reduce using rule 3 (segment_list -> empty .)
    NUMBER          reduce using rule 3 (segment_list -> empty .)
    STRING_LITERAL  reduce using rule 3 (segment_list -> empty .)
    $end            reduce using rule 3 (segment_list -> empty .)


state 4

    (2) segment_list -> segment_list segment .

    CLASS           reduce using rule 2 (segment_list -> segment_list segment .)
    IMPORT          reduce using rule 2 (segment_list -> segment_list segment .)
    FROM            reduce using rule 2 (segment_list -> segment_list segment .)
    DEF             reduce using rule 2 (segment_list -> segment_list segment .)
    IDENTIFIER      reduce using rule 2 (segment_list -> segment_list segment .)
    RETURN          reduce using rule 2 (segment_list -> segment_list segment .)
    PASS            reduce using rule 2 (segment_list -> segment_list segment .)
    NUMBER          reduce using rule 2 (segment_list -> segment_list segment .)
    STRING_LITERAL  reduce using rule 2 (segment_list -> segment_list segment .)
    $end            reduce using rule 2 (segment_list -> segment_list segment .)


state 5

    (4) segment -> misc_list . class_def misc_list
    (5) misc_list -> misc_list . misc
    (7) class_def -> . CLASS IDENTIFIER inheritance_opt COLON suite
    (12) misc -> . import_stmt
    (13) misc -> . function_def
    (14) misc -> . statement
    (15) import_stmt -> . IMPORT IDENTIFIER import_dots_opt
    (16) import_stmt -> . FROM IDENTIFIER import_dots_opt IMPORT IDENTIFIER import_id_list_opt
    (25) function_def -> . DEF IDENTIFIER LPAREN parameters_opt RPAREN COLON suite
    (30) statement -> . attribute_as
    (31) statement -> . simple_stmt
    (32) statement -> . function_def
    (33) statement -> . class_def
    (34) attribute_as -> . IDENTIFIER ASSIGN expression
    (35) simple_stmt -> . RETURN expression
    (36) simple_stmt -> . expression
    (37) simple_stmt -> . PASS
    (38) expression -> . IDENTIFIER
    (39) expression -> . literal
    (40) literal -> . NUMBER
    (41) literal -> . STRING_LITERAL

    CLASS           shift and go to state 9
    IMPORT          shift and go to state 14
    FROM            shift and go to state 15
    DEF             shift and go to state 16
    IDENTIFIER      shift and go to state 10
    RETURN          shift and go to state 20
    PASS            shift and go to state 21
    NUMBER          shift and go to state 23
    STRING_LITERAL  shift and go to state 24

    class_def                      shift and go to state 7
    misc                           shift and go to state 8
    import_stmt                    shift and go to state 11
    function_def                   shift and go to state 12
    statement                      shift and go to state 13
    attribute_as                   shift and go to state 17
    simple_stmt                    shift and go to state 18
    expression                     shift and go to state 19
    literal                        shift and go to state 22

state 6

    (6) misc_list -> empty .

    CLASS           reduce using rule 6 (misc_list -> empty .)
    IMPORT          reduce using rule 6 (misc_list -> empty .)
    FROM            reduce using rule 6 (misc_list -> empty .)
    DEF             reduce using rule 6 (misc_list -> empty .)
    IDENTIFIER      reduce using rule 6 (misc_list -> empty .)
    RETURN          reduce using rule 6 (misc_list -> empty .)
    PASS            reduce using rule 6 (misc_list -> empty .)
    NUMBER          reduce using rule 6 (misc_list -> empty .)
    STRING_LITERAL  reduce using rule 6 (misc_list -> empty .)
    $end            reduce using rule 6 (misc_list -> empty .)


state 7

    (4) segment -> misc_list class_def . misc_list
    (33) statement -> class_def .
    (5) misc_list -> . misc_list misc
    (6) misc_list -> . empty
    (44) empty -> .

  ! reduce/reduce conflict for IMPORT resolved using rule 33 (statement -> class_def .)
  ! reduce/reduce conflict for FROM resolved using rule 33 (statement -> class_def .)
  ! reduce/reduce conflict for DEF resolved using rule 33 (statement -> class_def .)
  ! reduce/reduce conflict for IDENTIFIER resolved using rule 33 (statement -> class_def .)
  ! reduce/reduce conflict for RETURN resolved using rule 33 (statement -> class_def .)
  ! reduce/reduce conflict for PASS resolved using rule 33 (statement -> class_def .)
  ! reduce/reduce conflict for CLASS resolved using rule 33 (statement -> class_def .)
  ! reduce/reduce conflict for NUMBER resolved using rule 33 (statement -> class_def .)
  ! reduce/reduce conflict for STRING_LITERAL resolved using rule 33 (statement -> class_def .)
    CLASS           reduce using rule 33 (statement -> class_def .)
    IMPORT          reduce using rule 33 (statement -> class_def .)
    FROM            reduce using rule 33 (statement -> class_def .)
    DEF             reduce using rule 33 (statement -> class_def .)
    IDENTIFIER      reduce using rule 33 (statement -> class_def .)
    RETURN          reduce using rule 33 (statement -> class_def .)
    PASS            reduce using rule 33 (statement -> class_def .)
    NUMBER          reduce using rule 33 (statement -> class_def .)
    STRING_LITERAL  reduce using rule 33 (statement -> class_def .)
    $end            reduce using rule 44 (empty -> .)

  ! IMPORT          [ reduce using rule 44 (empty -> .) ]
  ! FROM            [ reduce using rule 44 (empty -> .) ]
  ! DEF             [ reduce using rule 44 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 44 (empty -> .) ]
  ! RETURN          [ reduce using rule 44 (empty -> .) ]
  ! PASS            [ reduce using rule 44 (empty -> .) ]
  ! CLASS           [ reduce using rule 44 (empty -> .) ]
  ! NUMBER          [ reduce using rule 44 (empty -> .) ]
  ! STRING_LITERAL  [ reduce using rule 44 (empty -> .) ]

    misc_list                      shift and go to state 25
    empty                          shift and go to state 6

state 8

    (5) misc_list -> misc_list misc .

    CLASS           reduce using rule 5 (misc_list -> misc_list misc .)
    IMPORT          reduce using rule 5 (misc_list -> misc_list misc .)
    FROM            reduce using rule 5 (misc_list -> misc_list misc .)
    DEF             reduce using rule 5 (misc_list -> misc_list misc .)
    IDENTIFIER      reduce using rule 5 (misc_list -> misc_list misc .)
    RETURN          reduce using rule 5 (misc_list -> misc_list misc .)
    PASS            reduce using rule 5 (misc_list -> misc_list misc .)
    NUMBER          reduce using rule 5 (misc_list -> misc_list misc .)
    STRING_LITERAL  reduce using rule 5 (misc_list -> misc_list misc .)
    $end            reduce using rule 5 (misc_list -> misc_list misc .)


state 9

    (7) class_def -> CLASS . IDENTIFIER inheritance_opt COLON suite

    IDENTIFIER      shift and go to state 26


state 10

    (34) attribute_as -> IDENTIFIER . ASSIGN expression
    (38) expression -> IDENTIFIER .

    ASSIGN          shift and go to state 27
    CLASS           reduce using rule 38 (expression -> IDENTIFIER .)
    IMPORT          reduce using rule 38 (expression -> IDENTIFIER .)
    FROM            reduce using rule 38 (expression -> IDENTIFIER .)
    DEF             reduce using rule 38 (expression -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 38 (expression -> IDENTIFIER .)
    RETURN          reduce using rule 38 (expression -> IDENTIFIER .)
    PASS            reduce using rule 38 (expression -> IDENTIFIER .)
    NUMBER          reduce using rule 38 (expression -> IDENTIFIER .)
    STRING_LITERAL  reduce using rule 38 (expression -> IDENTIFIER .)
    $end            reduce using rule 38 (expression -> IDENTIFIER .)


state 11

    (12) misc -> import_stmt .

    CLASS           reduce using rule 12 (misc -> import_stmt .)
    IMPORT          reduce using rule 12 (misc -> import_stmt .)
    FROM            reduce using rule 12 (misc -> import_stmt .)
    DEF             reduce using rule 12 (misc -> import_stmt .)
    IDENTIFIER      reduce using rule 12 (misc -> import_stmt .)
    RETURN          reduce using rule 12 (misc -> import_stmt .)
    PASS            reduce using rule 12 (misc -> import_stmt .)
    NUMBER          reduce using rule 12 (misc -> import_stmt .)
    STRING_LITERAL  reduce using rule 12 (misc -> import_stmt .)
    $end            reduce using rule 12 (misc -> import_stmt .)


state 12

    (13) misc -> function_def .
    (32) statement -> function_def .

  ! reduce/reduce conflict for CLASS resolved using rule 13 (misc -> function_def .)
  ! reduce/reduce conflict for IMPORT resolved using rule 13 (misc -> function_def .)
  ! reduce/reduce conflict for FROM resolved using rule 13 (misc -> function_def .)
  ! reduce/reduce conflict for DEF resolved using rule 13 (misc -> function_def .)
  ! reduce/reduce conflict for IDENTIFIER resolved using rule 13 (misc -> function_def .)
  ! reduce/reduce conflict for RETURN resolved using rule 13 (misc -> function_def .)
  ! reduce/reduce conflict for PASS resolved using rule 13 (misc -> function_def .)
  ! reduce/reduce conflict for NUMBER resolved using rule 13 (misc -> function_def .)
  ! reduce/reduce conflict for STRING_LITERAL resolved using rule 13 (misc -> function_def .)
  ! reduce/reduce conflict for $end resolved using rule 13 (misc -> function_def .)
    CLASS           reduce using rule 13 (misc -> function_def .)
    IMPORT          reduce using rule 13 (misc -> function_def .)
    FROM            reduce using rule 13 (misc -> function_def .)
    DEF             reduce using rule 13 (misc -> function_def .)
    IDENTIFIER      reduce using rule 13 (misc -> function_def .)
    RETURN          reduce using rule 13 (misc -> function_def .)
    PASS            reduce using rule 13 (misc -> function_def .)
    NUMBER          reduce using rule 13 (misc -> function_def .)
    STRING_LITERAL  reduce using rule 13 (misc -> function_def .)
    $end            reduce using rule 13 (misc -> function_def .)

  ! CLASS           [ reduce using rule 32 (statement -> function_def .) ]
  ! IMPORT          [ reduce using rule 32 (statement -> function_def .) ]
  ! FROM            [ reduce using rule 32 (statement -> function_def .) ]
  ! DEF             [ reduce using rule 32 (statement -> function_def .) ]
  ! IDENTIFIER      [ reduce using rule 32 (statement -> function_def .) ]
  ! RETURN          [ reduce using rule 32 (statement -> function_def .) ]
  ! PASS            [ reduce using rule 32 (statement -> function_def .) ]
  ! NUMBER          [ reduce using rule 32 (statement -> function_def .) ]
  ! STRING_LITERAL  [ reduce using rule 32 (statement -> function_def .) ]
  ! $end            [ reduce using rule 32 (statement -> function_def .) ]


state 13

    (14) misc -> statement .

    CLASS           reduce using rule 14 (misc -> statement .)
    IMPORT          reduce using rule 14 (misc -> statement .)
    FROM            reduce using rule 14 (misc -> statement .)
    DEF             reduce using rule 14 (misc -> statement .)
    IDENTIFIER      reduce using rule 14 (misc -> statement .)
    RETURN          reduce using rule 14 (misc -> statement .)
    PASS            reduce using rule 14 (misc -> statement .)
    NUMBER          reduce using rule 14 (misc -> statement .)
    STRING_LITERAL  reduce using rule 14 (misc -> statement .)
    $end            reduce using rule 14 (misc -> statement .)


state 14

    (15) import_stmt -> IMPORT . IDENTIFIER import_dots_opt

    IDENTIFIER      shift and go to state 28


state 15

    (16) import_stmt -> FROM . IDENTIFIER import_dots_opt IMPORT IDENTIFIER import_id_list_opt

    IDENTIFIER      shift and go to state 29


state 16

    (25) function_def -> DEF . IDENTIFIER LPAREN parameters_opt RPAREN COLON suite

    IDENTIFIER      shift and go to state 30


state 17

    (30) statement -> attribute_as .

    CLASS           reduce using rule 30 (statement -> attribute_as .)
    IMPORT          reduce using rule 30 (statement -> attribute_as .)
    FROM            reduce using rule 30 (statement -> attribute_as .)
    DEF             reduce using rule 30 (statement -> attribute_as .)
    IDENTIFIER      reduce using rule 30 (statement -> attribute_as .)
    RETURN          reduce using rule 30 (statement -> attribute_as .)
    PASS            reduce using rule 30 (statement -> attribute_as .)
    NUMBER          reduce using rule 30 (statement -> attribute_as .)
    STRING_LITERAL  reduce using rule 30 (statement -> attribute_as .)
    $end            reduce using rule 30 (statement -> attribute_as .)


state 18

    (31) statement -> simple_stmt .

    CLASS           reduce using rule 31 (statement -> simple_stmt .)
    IMPORT          reduce using rule 31 (statement -> simple_stmt .)
    FROM            reduce using rule 31 (statement -> simple_stmt .)
    DEF             reduce using rule 31 (statement -> simple_stmt .)
    IDENTIFIER      reduce using rule 31 (statement -> simple_stmt .)
    RETURN          reduce using rule 31 (statement -> simple_stmt .)
    PASS            reduce using rule 31 (statement -> simple_stmt .)
    NUMBER          reduce using rule 31 (statement -> simple_stmt .)
    STRING_LITERAL  reduce using rule 31 (statement -> simple_stmt .)
    $end            reduce using rule 31 (statement -> simple_stmt .)


state 19

    (36) simple_stmt -> expression .

    CLASS           reduce using rule 36 (simple_stmt -> expression .)
    IMPORT          reduce using rule 36 (simple_stmt -> expression .)
    FROM            reduce using rule 36 (simple_stmt -> expression .)
    DEF             reduce using rule 36 (simple_stmt -> expression .)
    IDENTIFIER      reduce using rule 36 (simple_stmt -> expression .)
    RETURN          reduce using rule 36 (simple_stmt -> expression .)
    PASS            reduce using rule 36 (simple_stmt -> expression .)
    NUMBER          reduce using rule 36 (simple_stmt -> expression .)
    STRING_LITERAL  reduce using rule 36 (simple_stmt -> expression .)
    $end            reduce using rule 36 (simple_stmt -> expression .)


state 20

    (35) simple_stmt -> RETURN . expression
    (38) expression -> . IDENTIFIER
    (39) expression -> . literal
    (40) literal -> . NUMBER
    (41) literal -> . STRING_LITERAL

    IDENTIFIER      shift and go to state 32
    NUMBER          shift and go to state 23
    STRING_LITERAL  shift and go to state 24

    expression                     shift and go to state 31
    literal                        shift and go to state 22

state 21

    (37) simple_stmt -> PASS .

    CLASS           reduce using rule 37 (simple_stmt -> PASS .)
    IMPORT          reduce using rule 37 (simple_stmt -> PASS .)
    FROM            reduce using rule 37 (simple_stmt -> PASS .)
    DEF             reduce using rule 37 (simple_stmt -> PASS .)
    IDENTIFIER      reduce using rule 37 (simple_stmt -> PASS .)
    RETURN          reduce using rule 37 (simple_stmt -> PASS .)
    PASS            reduce using rule 37 (simple_stmt -> PASS .)
    NUMBER          reduce using rule 37 (simple_stmt -> PASS .)
    STRING_LITERAL  reduce using rule 37 (simple_stmt -> PASS .)
    $end            reduce using rule 37 (simple_stmt -> PASS .)


state 22

    (39) expression -> literal .

    CLASS           reduce using rule 39 (expression -> literal .)
    IMPORT          reduce using rule 39 (expression -> literal .)
    FROM            reduce using rule 39 (expression -> literal .)
    DEF             reduce using rule 39 (expression -> literal .)
    IDENTIFIER      reduce using rule 39 (expression -> literal .)
    RETURN          reduce using rule 39 (expression -> literal .)
    PASS            reduce using rule 39 (expression -> literal .)
    NUMBER          reduce using rule 39 (expression -> literal .)
    STRING_LITERAL  reduce using rule 39 (expression -> literal .)
    $end            reduce using rule 39 (expression -> literal .)


state 23

    (40) literal -> NUMBER .

    CLASS           reduce using rule 40 (literal -> NUMBER .)
    IMPORT          reduce using rule 40 (literal -> NUMBER .)
    FROM            reduce using rule 40 (literal -> NUMBER .)
    DEF             reduce using rule 40 (literal -> NUMBER .)
    IDENTIFIER      reduce using rule 40 (literal -> NUMBER .)
    RETURN          reduce using rule 40 (literal -> NUMBER .)
    PASS            reduce using rule 40 (literal -> NUMBER .)
    NUMBER          reduce using rule 40 (literal -> NUMBER .)
    STRING_LITERAL  reduce using rule 40 (literal -> NUMBER .)
    $end            reduce using rule 40 (literal -> NUMBER .)


state 24

    (41) literal -> STRING_LITERAL .

    CLASS           reduce using rule 41 (literal -> STRING_LITERAL .)
    IMPORT          reduce using rule 41 (literal -> STRING_LITERAL .)
    FROM            reduce using rule 41 (literal -> STRING_LITERAL .)
    DEF             reduce using rule 41 (literal -> STRING_LITERAL .)
    IDENTIFIER      reduce using rule 41 (literal -> STRING_LITERAL .)
    RETURN          reduce using rule 41 (literal -> STRING_LITERAL .)
    PASS            reduce using rule 41 (literal -> STRING_LITERAL .)
    NUMBER          reduce using rule 41 (literal -> STRING_LITERAL .)
    STRING_LITERAL  reduce using rule 41 (literal -> STRING_LITERAL .)
    $end            reduce using rule 41 (literal -> STRING_LITERAL .)


state 25

    (4) segment -> misc_list class_def misc_list .
    (5) misc_list -> misc_list . misc
    (12) misc -> . import_stmt
    (13) misc -> . function_def
    (14) misc -> . statement
    (15) import_stmt -> . IMPORT IDENTIFIER import_dots_opt
    (16) import_stmt -> . FROM IDENTIFIER import_dots_opt IMPORT IDENTIFIER import_id_list_opt
    (25) function_def -> . DEF IDENTIFIER LPAREN parameters_opt RPAREN COLON suite
    (30) statement -> . attribute_as
    (31) statement -> . simple_stmt
    (32) statement -> . function_def
    (33) statement -> . class_def
    (34) attribute_as -> . IDENTIFIER ASSIGN expression
    (35) simple_stmt -> . RETURN expression
    (36) simple_stmt -> . expression
    (37) simple_stmt -> . PASS
    (7) class_def -> . CLASS IDENTIFIER inheritance_opt COLON suite
    (38) expression -> . IDENTIFIER
    (39) expression -> . literal
    (40) literal -> . NUMBER
    (41) literal -> . STRING_LITERAL

  ! shift/reduce conflict for IMPORT resolved as shift
  ! shift/reduce conflict for FROM resolved as shift
  ! shift/reduce conflict for DEF resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for PASS resolved as shift
  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for STRING_LITERAL resolved as shift
    $end            reduce using rule 4 (segment -> misc_list class_def misc_list .)
    IMPORT          shift and go to state 14
    FROM            shift and go to state 15
    DEF             shift and go to state 16
    IDENTIFIER      shift and go to state 10
    RETURN          shift and go to state 20
    PASS            shift and go to state 21
    CLASS           shift and go to state 9
    NUMBER          shift and go to state 23
    STRING_LITERAL  shift and go to state 24

  ! CLASS           [ reduce using rule 4 (segment -> misc_list class_def misc_list .) ]
  ! IMPORT          [ reduce using rule 4 (segment -> misc_list class_def misc_list .) ]
  ! FROM            [ reduce using rule 4 (segment -> misc_list class_def misc_list .) ]
  ! DEF             [ reduce using rule 4 (segment -> misc_list class_def misc_list .) ]
  ! IDENTIFIER      [ reduce using rule 4 (segment -> misc_list class_def misc_list .) ]
  ! RETURN          [ reduce using rule 4 (segment -> misc_list class_def misc_list .) ]
  ! PASS            [ reduce using rule 4 (segment -> misc_list class_def misc_list .) ]
  ! NUMBER          [ reduce using rule 4 (segment -> misc_list class_def misc_list .) ]
  ! STRING_LITERAL  [ reduce using rule 4 (segment -> misc_list class_def misc_list .) ]

    class_def                      shift and go to state 33
    misc                           shift and go to state 8
    import_stmt                    shift and go to state 11
    function_def                   shift and go to state 12
    statement                      shift and go to state 13
    attribute_as                   shift and go to state 17
    simple_stmt                    shift and go to state 18
    expression                     shift and go to state 19
    literal                        shift and go to state 22

state 26

    (7) class_def -> CLASS IDENTIFIER . inheritance_opt COLON suite
    (8) inheritance_opt -> . LPAREN base_classes RPAREN
    (9) inheritance_opt -> . empty
    (44) empty -> .

    LPAREN          shift and go to state 35
    COLON           reduce using rule 44 (empty -> .)

    inheritance_opt                shift and go to state 34
    empty                          shift and go to state 36

state 27

    (34) attribute_as -> IDENTIFIER ASSIGN . expression
    (38) expression -> . IDENTIFIER
    (39) expression -> . literal
    (40) literal -> . NUMBER
    (41) literal -> . STRING_LITERAL

    IDENTIFIER      shift and go to state 32
    NUMBER          shift and go to state 23
    STRING_LITERAL  shift and go to state 24

    expression                     shift and go to state 37
    literal                        shift and go to state 22

state 28

    (15) import_stmt -> IMPORT IDENTIFIER . import_dots_opt
    (17) import_dots_opt -> . import_dots
    (18) import_dots_opt -> . empty
    (19) import_dots -> . import_dots DOT IDENTIFIER
    (20) import_dots -> . DOT IDENTIFIER
    (44) empty -> .

    DOT             shift and go to state 41
    CLASS           reduce using rule 44 (empty -> .)
    IMPORT          reduce using rule 44 (empty -> .)
    FROM            reduce using rule 44 (empty -> .)
    DEF             reduce using rule 44 (empty -> .)
    IDENTIFIER      reduce using rule 44 (empty -> .)
    RETURN          reduce using rule 44 (empty -> .)
    PASS            reduce using rule 44 (empty -> .)
    NUMBER          reduce using rule 44 (empty -> .)
    STRING_LITERAL  reduce using rule 44 (empty -> .)
    $end            reduce using rule 44 (empty -> .)

    import_dots_opt                shift and go to state 38
    import_dots                    shift and go to state 39
    empty                          shift and go to state 40

state 29

    (16) import_stmt -> FROM IDENTIFIER . import_dots_opt IMPORT IDENTIFIER import_id_list_opt
    (17) import_dots_opt -> . import_dots
    (18) import_dots_opt -> . empty
    (19) import_dots -> . import_dots DOT IDENTIFIER
    (20) import_dots -> . DOT IDENTIFIER
    (44) empty -> .

    DOT             shift and go to state 41
    IMPORT          reduce using rule 44 (empty -> .)

    import_dots_opt                shift and go to state 42
    import_dots                    shift and go to state 39
    empty                          shift and go to state 40

state 30

    (25) function_def -> DEF IDENTIFIER . LPAREN parameters_opt RPAREN COLON suite

    LPAREN          shift and go to state 43


state 31

    (35) simple_stmt -> RETURN expression .

    CLASS           reduce using rule 35 (simple_stmt -> RETURN expression .)
    IMPORT          reduce using rule 35 (simple_stmt -> RETURN expression .)
    FROM            reduce using rule 35 (simple_stmt -> RETURN expression .)
    DEF             reduce using rule 35 (simple_stmt -> RETURN expression .)
    IDENTIFIER      reduce using rule 35 (simple_stmt -> RETURN expression .)
    RETURN          reduce using rule 35 (simple_stmt -> RETURN expression .)
    PASS            reduce using rule 35 (simple_stmt -> RETURN expression .)
    NUMBER          reduce using rule 35 (simple_stmt -> RETURN expression .)
    STRING_LITERAL  reduce using rule 35 (simple_stmt -> RETURN expression .)
    $end            reduce using rule 35 (simple_stmt -> RETURN expression .)


state 32

    (38) expression -> IDENTIFIER .

    CLASS           reduce using rule 38 (expression -> IDENTIFIER .)
    IMPORT          reduce using rule 38 (expression -> IDENTIFIER .)
    FROM            reduce using rule 38 (expression -> IDENTIFIER .)
    DEF             reduce using rule 38 (expression -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 38 (expression -> IDENTIFIER .)
    RETURN          reduce using rule 38 (expression -> IDENTIFIER .)
    PASS            reduce using rule 38 (expression -> IDENTIFIER .)
    NUMBER          reduce using rule 38 (expression -> IDENTIFIER .)
    STRING_LITERAL  reduce using rule 38 (expression -> IDENTIFIER .)
    $end            reduce using rule 38 (expression -> IDENTIFIER .)


state 33

    (33) statement -> class_def .

    IMPORT          reduce using rule 33 (statement -> class_def .)
    FROM            reduce using rule 33 (statement -> class_def .)
    DEF             reduce using rule 33 (statement -> class_def .)
    IDENTIFIER      reduce using rule 33 (statement -> class_def .)
    RETURN          reduce using rule 33 (statement -> class_def .)
    PASS            reduce using rule 33 (statement -> class_def .)
    CLASS           reduce using rule 33 (statement -> class_def .)
    NUMBER          reduce using rule 33 (statement -> class_def .)
    STRING_LITERAL  reduce using rule 33 (statement -> class_def .)
    $end            reduce using rule 33 (statement -> class_def .)


state 34

    (7) class_def -> CLASS IDENTIFIER inheritance_opt . COLON suite

    COLON           shift and go to state 44


state 35

    (8) inheritance_opt -> LPAREN . base_classes RPAREN
    (10) base_classes -> . IDENTIFIER
    (11) base_classes -> . base_classes COMMA IDENTIFIER

    IDENTIFIER      shift and go to state 46

    base_classes                   shift and go to state 45

state 36

    (9) inheritance_opt -> empty .

    COLON           reduce using rule 9 (inheritance_opt -> empty .)


state 37

    (34) attribute_as -> IDENTIFIER ASSIGN expression .

    CLASS           reduce using rule 34 (attribute_as -> IDENTIFIER ASSIGN expression .)
    IMPORT          reduce using rule 34 (attribute_as -> IDENTIFIER ASSIGN expression .)
    FROM            reduce using rule 34 (attribute_as -> IDENTIFIER ASSIGN expression .)
    DEF             reduce using rule 34 (attribute_as -> IDENTIFIER ASSIGN expression .)
    IDENTIFIER      reduce using rule 34 (attribute_as -> IDENTIFIER ASSIGN expression .)
    RETURN          reduce using rule 34 (attribute_as -> IDENTIFIER ASSIGN expression .)
    PASS            reduce using rule 34 (attribute_as -> IDENTIFIER ASSIGN expression .)
    NUMBER          reduce using rule 34 (attribute_as -> IDENTIFIER ASSIGN expression .)
    STRING_LITERAL  reduce using rule 34 (attribute_as -> IDENTIFIER ASSIGN expression .)
    $end            reduce using rule 34 (attribute_as -> IDENTIFIER ASSIGN expression .)


state 38

    (15) import_stmt -> IMPORT IDENTIFIER import_dots_opt .

    CLASS           reduce using rule 15 (import_stmt -> IMPORT IDENTIFIER import_dots_opt .)
    IMPORT          reduce using rule 15 (import_stmt -> IMPORT IDENTIFIER import_dots_opt .)
    FROM            reduce using rule 15 (import_stmt -> IMPORT IDENTIFIER import_dots_opt .)
    DEF             reduce using rule 15 (import_stmt -> IMPORT IDENTIFIER import_dots_opt .)
    IDENTIFIER      reduce using rule 15 (import_stmt -> IMPORT IDENTIFIER import_dots_opt .)
    RETURN          reduce using rule 15 (import_stmt -> IMPORT IDENTIFIER import_dots_opt .)
    PASS            reduce using rule 15 (import_stmt -> IMPORT IDENTIFIER import_dots_opt .)
    NUMBER          reduce using rule 15 (import_stmt -> IMPORT IDENTIFIER import_dots_opt .)
    STRING_LITERAL  reduce using rule 15 (import_stmt -> IMPORT IDENTIFIER import_dots_opt .)
    $end            reduce using rule 15 (import_stmt -> IMPORT IDENTIFIER import_dots_opt .)


state 39

    (17) import_dots_opt -> import_dots .
    (19) import_dots -> import_dots . DOT IDENTIFIER
